# agent-supagents

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  README.md  gemini-extension.json  justfile  plugin.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: cd.yml  ci.yml
skills/use-agent-supagents/: SKILL.md
src/supagents/: __init__.py  __main__.py  cli.py  config.py  core.py
tests/: conftest.py  test_cli.py  test_config.py  test_core.py
tests/fixtures/: claude_only.md  code_investigator.md  malformed.md  unknown_target.md
